--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<p>A collection of work produced by<br />
 					Brandon Roberts</p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">Discover</a></li>
+						<li><a href="#one" class="button scrolly">About Me</a></li>
 					</ul>
 				</div>
 			</section>
@@ -106,7 +106,7 @@
 					</div>
 				</div>
 			</section>
-
+/*
 		<!-- Four -->
 			<section id="four" class="main style2 special">
 				<div class="container">
@@ -120,7 +120,7 @@
 					</ul>
 				</div>
 			</section>
-
+*/
 		<!-- Five -->
 		<!--
 			<section id="five" class="main style1">
