--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Welcome to my <strong>Portfolio</strong></h1>
-					<p>A collection of work produced by<br />
-					Brandon Roberts</p>
+					<p>Portfolio of work by<br />
+					<strong>Brandon Roberts</strong></p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">About Me</a></li>
 					</ul>
@@ -33,9 +33,9 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Header of first section - about me</h2>
+								<h2>About Me</h2>
 							</header>
-							<p>First paragraph of the first section.</p>
+							<p>Short summary about me.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -60,7 +60,7 @@
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Header of the right side of the icons on the left<br />
+								<h2>Details about icons on the left<br />
 								second line of the content</h2>
 							</header>
 							<p>Details about the first of three projects worth showing.</p>
@@ -81,7 +81,7 @@
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3><strong>Name</strong></h3>
+							<h3><strong>Rituals</strong></h3>
 							<p>Small explanation.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
@@ -89,7 +89,7 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3><strong>Name 2</strong></h3>
+							<h3><strong>Lost My Marbles</strong></h3>
 							<p>Details 2.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
@@ -97,7 +97,7 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3><strong>Name 3</strong></h3>
+							<h3><strong>Pacman</strong></h3>
 							<p>Content 3.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
