--- a/index.html
+++ b/index.html
@@ -441,11 +441,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/in/brandon-m-j-roberts/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+					<li><a href="https://github.com/BrandonMJRoberts?tab=repositories" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://twitter.com/explore" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Brandon Roberts</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Brandon Roberts</li><li>2020</li>
 				</ul>
 			</section>
 
