--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3><strong>Pacman</strong></h3>
-							<p>Content 3.</p>
+							<p>Gone through.</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/BrandonMJRoberts/Pacman" class="button">More</a></li>
 							</ul>
