--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<li><span class="icon solid style6 major fa-calendar"></span></li>
 							</ul>
 						</div>
-						<div class="col-6 col-12-medium">
+						<div class="col-6 col-15-medium"> <!-- width and height -->
 							<header class="major">
 								<h2>Details about icons on the left<br />
 								second line of the content</h2>
