--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<h3><strong>Rituals</strong></h3>
 							<p>Small explanation.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">View On Appstore</a></li>
+								<li><a href="https://apps.apple.com/app/id1484723352?ls=1" class="button">View On Appstore</a></li>
 							</ul>
 						</div>
 						
@@ -96,7 +96,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3><strong>Pacman</strong></h3>
-							<p>Gone through.</p>
+							<p>Re-creation of the classic <strong>pacman</strong> game, written using a university framework for a module.</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/BrandonMJRoberts/Pacman/tree/master/Pacman" class="button">Github Link</a></li>
 							</ul>
