--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
 							<h3><strong>Rituals</strong></h3>
-							<p>Small explanation.</p>
+							<p>Mobile horror game developed whilst working at Curioso Games.</p>
 							<ul class="actions special">
 								<li><a href="https://apps.apple.com/app/id1484723352?ls=1" class="button">View On Appstore</a></li>
 							</ul>
@@ -87,7 +87,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 							<h3><strong>Lost My Marbles</strong></h3>
-							<p>Details 2.</p>
+							<p>Charming match-4 marble dropping game developed whilst working at Curioso Games.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">View On Appstore</a></li>
 							</ul>
@@ -105,7 +105,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3><strong>Projects</strong></h3>
-							<p>Content 4.</p>
+							<p>Link to a display of my multiple side projects.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">Display</a></li>
 							</ul>
@@ -114,7 +114,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3><strong>Game Jams: Long Live The King</strong></h3>
-							<p>Content 4.</p>
+							<p>Developed for the Ludum Dare game jam event.</p>
 							<ul class="actions special">
 								<li><a href="https://player-two.itch.io/long-live-the-king" class="button">itch.io</a></li>
 							</ul>
@@ -123,7 +123,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3><strong>Game Jams: Zombie Escape</strong></h3>
-							<p>Content 4.</p>
+							<p>Developed during a two day game jam, whilst working in a small team.</p>
 							<ul class="actions special">
 								<li><a href="https://player-two.itch.io/zombie-escape" class="button">itch.io</a></li>
 							</ul>
