--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
-							<p>Short summary about me.</p>
+							<p>Currently a student in the first year of my Computer Games Programming Degree at Staffordshire University.<br />
+							I have been learning and developing projects for the past four years, <br />
+							with an eight month span working as a programmer at a local mobile games company <a href="https://www.curiosogames.com/">Curioso Games</a> <br />
+							I am currently working on university projects along participating in occasional <super><a href="https://player-two.itch.io/">Game Jam<a/></super> events.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
