--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<p>Currently a student in the first year of my Computer Games Programming Degree at Staffordshire University.<br />
 							I have been learning and developing projects for the past four years, <br />
 							with an eight month span working as a programmer at a local mobile games company <a href="https://www.curiosogames.com/">Curioso Games</a> <br />
-							I am currently working on university projects along participating in occasional <super><a href="https://player-two.itch.io/">Game Jam<a/></super> events.</p>
+							I am currently working on university projects along participating in occasional <b><a href="https://player-two.itch.io/">Game Jam<a/></b> events.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -81,7 +81,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
 							<h3><strong>Rituals</strong></h3>
-							<p>Mobile horror game developed whilst working at Curioso Games.</p>
+							<p>Unique mobile horror game developed whilst working at Curioso Games.</p>
 							<ul class="actions special">
 								<li><a href="https://apps.apple.com/app/id1484723352?ls=1" class="button">View On Appstore</a></li>
 							</ul>
@@ -99,7 +99,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3><strong>Pacman</strong></h3>
-							<p>Re-creation of the classic <strong>pacman</strong> game, written using a university framework for a module.</p>
+							<p>Re-creation of the classic <i><b>Pacman</b></i> game, written using a university framework for a module.</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/BrandonMJRoberts/Pacman/tree/master/Pacman" class="button">Github Link</a></li>
 							</ul>
