--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 			<section id="one" class="main style1">
 				<div class="container">
 					<div class="row gtr-150">
-						<div class="col-8 col-12-medium">
+						<div class="col-6 col-15-medium">
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
 							<p>Currently a student in the first year of my Computer Games Programming Degree at Staffordshire University.<br />
 							I have been learning and developing projects for the past four years, <br />
 							with an eight month span working as a programmer at a local mobile games company <a href="https://www.curiosogames.com/">Curioso Games</a> <br />
-							I am currently working on university projects along participating in occasional <b><a href="https://player-two.itch.io/">Game Jam<a/></b> events.</p>
+							I am currently working on university projects along participating in occasional <b><a href="https://player-two.itch.io/">Game Jam</a></b> events.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
