--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3><strong><b>Long Live The King</b></strong></h3>
-							<p>Developed for the Ludum Dare game jam event.</p>
+							<p>Developed for the <b>Ludum Dare 43</b> Game Jam event.</p>
 							<ul class="actions special">
 								<li><a href="https://player-two.itch.io/long-live-the-king" class="button">itch.io</a></li>
 							</ul>
@@ -126,7 +126,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3><strong><b>Zombie Escape</b></strong></h3>
-							<p>Developed during a two day game jam, whilst working in a small team.</p>
+							<p>Developed during a two day game jam - <b>Ludum Dare 42</b> - whilst working in a small team.</p>
 							<ul class="actions special">
 								<li><a href="https://player-two.itch.io/zombie-escape" class="button">itch.io</a></li>
 							</ul>
