--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 							</header>
 							<p>Currently a student in the first year of my Computer Games Programming Degree at Staffordshire University.<br />
 							I have been learning and developing projects for the past four years, <br />
-							with an eight month span working as a programmer at a local mobile games company <a href="https://www.curiosogames.com/">Curioso Games</a> <br />
-							I am currently working on university projects along participating in occasional <b><a href="https://player-two.itch.io/">Game Jam</a></b> events.</p>
+							with an eight month span working as a programmer at a local mobile games company <b><a href="https://www.curiosogames.com/">Curioso Games</a></b> <br />
+							Am currently working soley on university projects as well as participating in occasional <b><a href="https://player-two.itch.io/">Game Jam</a></b> event.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
@@ -74,9 +74,9 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Main header of the next section</h2>
+						<h2>Previous Projects</h2>
 					</header>
-					<p>Sub-header of this section.</p>
+					<p>Here is a run down of my main projects and involvement.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
@@ -126,7 +126,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3><strong><b>Zombie Escape</b></strong></h3>
-							<p>Developed during a two day game jam - <b>Ludum Dare 42</b> - whilst working in a small team.</p>
+							<p>Developed during a two day Game Jam <b>Ludum Dare 42</b> whilst working in a small team.</p>
 							<ul class="actions special">
 								<li><a href="https://player-two.itch.io/zombie-escape" class="button">itch.io</a></li>
 							</ul>
