--- a/index.html
+++ b/index.html
@@ -44,39 +44,12 @@
 			</section>
 
 		<!-- Two -->
-			<section id="two" class="main style2">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-bolt"></span></li>
-								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
-								<li><span class="icon solid style4 major fa-cog"></span></li>
-								<li><span class="icon solid style5 major fa-desktop"></span></li>
-								<li><span class="icon solid style6 major fa-calendar"></span></li>
-							</ul>
-						</div>
-						<div class="col-6 col-15-medium"> <!-- width and height -->
-							<header class="major">
-								<h2>Details about icons on the left<br />
-								second line of the content</h2>
-							</header>
-							<p>Details about the first of three projects worth showing.</p>
-							<p>Details about the second of three projects worth showing.</p>
-							<p>Details about the third of three projects worth showing.</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-		<!-- Three -->
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
 						<h2>Previous Projects</h2>
 					</header>
-					<p>Here is a run down of my main projects and involvement.</p>
+					<p>Below is a run down of my main projects and involvement.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
@@ -116,6 +89,33 @@
 					</div>
 				</div>
 			</section>
+		
+		<!-- Three -->
+			<section id="two" class="main style2">
+				<div class="container">
+					<div class="row gtr-150">
+						<div class="col-6 col-12-medium">
+							<ul class="major-icons">
+								<li><span class="icon solid style1 major fa-code"></span></li>
+								<li><span class="icon solid style2 major fa-bolt"></span></li>
+								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
+								<li><span class="icon solid style4 major fa-cog"></span></li>
+								<li><span class="icon solid style5 major fa-desktop"></span></li>
+								<li><span class="icon solid style6 major fa-calendar"></span></li>
+							</ul>
+						</div>
+						<div class="col-6 col-15-medium"> <!-- width and height -->
+							<header class="major">
+								<h2>Rundown of my main projects in more detail</h2>
+							</header>
+							<p>Details about the first two icons, and by extension the first of three projects worth showing.</p>
+							<p>Details about the second row of two icons, and by extension the second of three projects worth showing.</p>
+							<p>Details about the third row of two icons, and by extension the third of three projects worth showing.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		
 		<!-- Four -->
 		<!--  
 			<section id="four" class="main style2 special">
