--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 						</div>
 						
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/LongLiveTheKingIcon.png" alt="images/pic04.jpg" /></span>
 							<h3><strong><b>Long Live The King</b></strong></h3>
 							<p>Developed for the <a href="https://player-two.itch.io/long-live-the-king"><b>Ludum Dare 43</b></a> Game Jam event.</p>
 						</div>
 						
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/ZombieEscapeIcon.png" alt="images/pic04.jpg" /></span>
 							<h3><strong><b>Zombie Escape</b></strong></h3>
 							<p>Developed during a two day Game Jam <a href="https://player-two.itch.io/zombie-escape"><b>Ludum Dare 42</b></a> whilst working in a small team.</p>
 						</div>
@@ -96,8 +96,7 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<ul class="major-icons">
-								<!--<li><span class="icon solid style1 major fa-code"></span></li> -->
-								<li><span class="https://img.itch.zone/aW1nLzE2ODU5OTAucG5n/315x250%23c/2exKZJ.png"></span></li>
+								<li><span class="icon solid style1 major fa-code"></span></li>
 								<li><span class="icon solid style2 major fa-bolt"></span></li>
 								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
 								<li><span class="icon solid style4 major fa-cog"></span></li>
