--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
 							<p>Details about the second row of two icons, and by extension the second of three projects worth showing.</p>
 							<p>Details about the third row of two icons, and by extension the third of three projects worth showing.</p>
 						</div>
+						<div class="col-6 col-12-medium imp-medium">
+							<span class="image fit"><img src="images/HeaderBackgroundwaterfall.jpg" alt="images/pic01.jpg" /></span>
+						</div>
 					</div>
 				</div>
 			</section>
