--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1><strong>Brandon Roberts</strong></h1>
-					<p>A portfolio of work.<br /> </p>
+					<h1><strong>A portfolio of work.</strong></h1>
+					<p>Brandon Roberts</p>
 				</div>
 			</section>
 
