--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<header class="major">
 						<h2>Previous Projects</h2>
 					</header>
-					<p>Below is a run down of my main projects and involvement.</p>
+					<p>Below is a run down of my main prior projects and involvement.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
@@ -113,7 +113,7 @@
 							<p>Details about the third row of two icons, and by extension the third of three projects worth showing.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/HeaderBackgroundwaterfall.jpg" alt="images/pic01.jpg" /></span>
+							<span class="image fit"><img src="images/HeaderBackgroundWaterfall.jpg" alt="images/pic01.jpg" /></span>
 						</div>
 					</div>
 				</div>
