--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							Am currently working soley on university projects as well as participating in occasional <b><a href="https://player-two.itch.io/">Game Jam</a></b> event.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/HeaderBackgroundWaterfall.jpg" alt="images/pic01.jpg" /></span>
+							<span class="image fit"><img src="images/pic01.jpg" alt="images/pic01.jpg" /></span>
 						</div>
 					</div>
 				</div>
@@ -111,9 +111,6 @@
 							<p>Details about the first two icons, and by extension the first of three projects worth showing.</p>
 							<p>Details about the second row of two icons, and by extension the second of three projects worth showing.</p>
 							<p>Details about the third row of two icons, and by extension the third of three projects worth showing.</p>
-						</div>
-						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/HeaderBackgroundWaterfall.jpg" alt="images/pic01.jpg" /></span>
 						</div>
 					</div>
 				</div>
