--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			</section>
 
 		<!-- Two -->
-			<section id="two" class="main style1 special">
+			<section id="two" class="main style2">
 				<div class="container">
 					<header class="major">
 						<h2>Previous Projects</h2>
@@ -91,7 +91,7 @@
 			</section>
 		
 		<!-- Three -->
-			<section id="three" class="main style2">
+			<section id="three" class="main style1 special">
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
