--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
+	<style>
+		body
+		{
+			background-image: url('header.jpg');
+			background-repeat: no-repeat;
+		};
+	</style>
+	
 	<head>
 		<title>Portfolio: Brandon Roberts</title>
 		<meta charset="utf-8" />
@@ -12,6 +20,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	
 	<body class="is-preload">
 
 		<!-- Header -->
@@ -256,7 +265,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<th>Price</th>
 									</tr>
 								</thead>
-								<tbody>
+								<t>
 									<tr>
 										<td>Item One</td>
 										<td>Ante turpis integer aliquet porttitor.</td>
