--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1><strong>A portfolio of work.</strong></h1>
+					<h1><strong>WORK IN PROGRESS! A portfolio of work.</strong></h1>
 					<p>Brandon Roberts</p>
 				</div>
 			</section>
