--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
-							<p>Currently a student in the first year of my Computer Games Programming Degree at Staffordshire University.<br />
-							I have been learning and developing projects for the past four years, <br />
+							<p>I am currently a student in the first year of my Computer Games Programming Degree at Staffordshire University.<br />
+							And have been learning and developing projects for the past four years, <br />
 							with an eight month span working as a programmer at a local mobile games company <b><a href="https://www.curiosogames.com/">Curioso Games</a></b> <br />
 							Am currently working soley on university projects as well as participating in occasional <b><a href="https://player-two.itch.io/">Game Jam</a></b> event.</p>
 						</div>
@@ -58,7 +58,7 @@
 					<header class="major">
 						<h2>Previous Projects</h2>
 					</header>
-					<p>Below is a run down of my main prior projects and involvement.</p>
+					<p>Below is a run down of my main prior projects and work.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
@@ -115,11 +115,11 @@
 						</div>
 						<div class="col-6 col-15-medium"> <!-- width and height -->
 							<header class="major">
-								<h2>Rundown of my main projects in more detail</h2>
+								<h2>More details of my main projects.</h2>
 							</header>
-							<p>Details about the first two icons, and by extension the first of three projects worth showing.</p>
-							<p>Details about the second row of two icons, and by extension the second of three projects worth showing.</p>
-							<p>Details about the third row of two icons, and by extension the third of three projects worth showing.</p>
+							<p>Details about University module content</p>
+							<p>Further details about working on rituals and marbles.</p>
+							<p>Further details about game jams i have competed in.</p>
 						</div>
 					</div>
 				</div>
