--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						</div>
 						
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pacmanImage.png" alt="" /></span>
 							<h3><strong><b>Pacman</b></strong></h3>
 							<p>Re-creation of the classic <a href="https://github.com/BrandonMJRoberts/Pacman/tree/master/Pacman"><i><b>Pacman</b></i></a> game, written using a university framework for a module.</p>
 						</div>
