--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pacmanImage.png" alt="" /></span>
 							<h3><strong><b>Pacman</b></strong></h3>
-							<p>Re-creation of the classic <a href="https://github.com/BrandonMJRoberts/Pacman/tree/master/Pacman"><i><b>Pacman</b></i></a> game, written using a university framework for a module.</p>
+							<p>Re-creation of the classic <a href="https://github.com/BrandonMJRoberts/Pacman/tree/master/Pacman"><i><b>Pacman</b></i></a> game, written using a university framework for my Games Engine Creation module.</p>
 						</div>
 						
 						<div class="col-4 col-12-medium">
