--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<ul class="major-icons">
-								<li><span class="icon solid style1 major fa-code"></span></li>
+								<li><span class="icon solid style1 major fa-code"><img src = "images/LLTKDiamondImage.png"></span></li>
 								<li><span class="icon solid style2 major fa-bolt"></span></li>
 								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
 								<li><span class="icon solid style4 major fa-cog"></span></li>
