--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
 								<h2>More details of my main projects.</h2>
 							</header>
 							<p>Coming to the end of the first simester of University content I have covered technological content ranging from how to present yourself professionally online, to the hardware aspect of computers. <br />
-							Over this time I have continued to work on improving my skillset in the language of <super>C++</super>, using <super>Visual studio</super> as a code editor. <br />
-							Furthermore, covering how data storage and conversion techniques are completed by the hardware has given me a greater understanding of how my programs manipulate data, allowing me to develop more efficient programs overall.</p>
-							<p>Having worked at my first professional programming job at a local mobile games company we, as a team, developed and released two products: <super><b><a href="#">Rituals</a></b></super> and <super><b><a href="#">Lost My Marbles</a></b></super>. <br />
-							These programs were developed using the scripting language of <super>C#</super> within the game engine <super>Unity</super> to create unique and fun games.</p>
-							<p>Having competed in two games jams so far, I have a hightened respect for the amount of time and effort that they take in order to complete, ensuring the game at the end is fun and unique in its own right.<br />
+							Over this time I have continued to work on improving my skillset in <super>C++</super> and using <super>Visual studio</super> as a code editor. <br />
+							Furthermore, covering how data storage and conversion techniques are handled by the hardware has given me a greater understanding of how my programs manipulate data, allowing me to develop more efficient programs overall.</p>
+							<p>Having worked at my first professional programming job, at a local mobile games company, I have had the opportunity to improve my ability as working as a team, using the scripting language C# within Unity, and working to deadlines within a company. <br />
+							As a team we developed and released two mobile games named: <super><b><a href="#">Rituals</a></b></super> and <super><b><a href="#">Lost My Marbles</a></b></super>.</p>
+							<p>Having competed in two games jams so far, my respect for the amount of time and effort that they take in order to complete, ensuring the game at the end is fun and unique, has been hightened.<br />
 							Both of these game jams were developed using <super>SDL2</super> and <super>C++</super> in a small team, over a two day span.<br />
-							This experience has improved my decision making overall, and my ability to write effective code quickly.</p>
+							This jam experience has improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered.</p>
 						</div>
 					</div>
 				</div>
