--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
-							<p>I am currently a student in the first year of my Computer Games Programming Degree at Staffordshire University.<br />
-							I have been learning and developing projects for the past four years, with an eight month span working as a programmer at a local mobile games company <b><a href="https://www.curiosogames.com/">Curioso Games</a></b> And I am currently working soley on university projects as well as participating in occasional <b><a href="https://player-two.itch.io/">Game Jam</a></b> event.</p>
+							<p>I am currently an undergraduate student in the first year of my Computer Games Programming Degree at Staffordshire University.<br />
+							Over the past four years I have been learning and developing projects in my spare time, as well as with an eight month span working as a programmer for a local mobile games company <b><a href="https://www.curiosogames.com/">Curioso Games</a></b> <br />
+							I am currently focusing my time on working on university projects as well as participating in occasional <b><a href="https://player-two.itch.io/">Game Jam</a></b> event.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="images/pic01.jpg" /></span>
