--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 							</header>
 							<p>Coming to the end of the first simester of University content I have covered technological content ranging from how to present yourself professionally online, to the hardware aspect of computers. <br />
 							Over this time I have had the opportunity to continue to work on improving my skillset in <super>C++</super> and using <super>Visual studio</super> as a code editor. <br />
-							Furthermore, covering how data storage and conversion techniques are handled by the hardware has given me a greater understanding of how my programs manipulate data, allowing me to develop more efficient programs overall.</p>
+							Through covering how the computer handles data storage and conversion I have a greater understanding of how my programs manage and manipulate data, allowing me to develop more efficient programs overall.</p>
 							<p>Having worked at my first professional programming job, at a local mobile games company, I have had the opportunity to improve my ability as working as a team, using the scripting language C# within Unity, and working to deadlines within a company. <br />
 							As a team we developed and released two mobile games named: <super><b><a href="#">Rituals</a></b></super> and <super><b><a href="#">Lost My Marbles</a></b></super>.</p>
 							<p>Having competed in two games jams so far, my respect for the amount of time and effort that they take in order to complete, ensuring the game at the end is fun and unique, has been hightened.<br />
