--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<ul class="major-icons">
-								<li><span class="icon solid style2 major fa-bolt"><img src = "images/LLTKDiamondImage.png" /></span></li>
+								<li><span class="image fit"><img src = "images/LLTKDiamondImage.png" /></span></li>
 								<li><span class="icon solid style2 major fa-bolt"></span></li>
 								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
 								<li><span class="icon solid style4 major fa-cog"></span></li>
