--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						</div>
 						
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/GenericCodeBackground.png" alt="" /></span>
 							<h3><strong><b>Projects</b></strong></h3>
 							<p>Link to a display of my <b><super><a href="#">Multiple Side Projects</a></super></b>.</p>
 						</div>
