--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
 							<header class="major">
 								<h2>More details of my main projects.</h2>
 							</header>
-							<p>Coming to the end of the first simester of University content I have covered technological content ranging from how to present yourself professionally online, to the hardware aspect of computers. <br />
+							<p>Coming to the end of the first simester of University content I have covered technological content ranging from how to present yourself professionally online, to the hardware aspect of game development. <br />
 							Over this time I have had the opportunity to continue to work on improving my skillset in <b>C++</b> and using <super>Visual studio</super> as a code editor. <br />
-							Through covering how the computer handles data storage and conversion I have a greater understanding of how my programs manage and manipulate data, allowing me to develop more efficient programs overall.</p>
+							Through covering how data is handled within programs, I have a greater understanding of how my programs store and convert data between types, allowing me to develop more efficient programs.</p>
 							<p>Having worked at my first professional programming job, at a local mobile games company, I have had the opportunity to improve my ability as working as a team, using the scripting language C# within Unity, and working to deadlines within a company. <br />
-							As a team we developed and released two mobile games named: <b><a href="https://apps.apple.com/app/id1484723352?ls=1">Rituals</a></b> and <b><a href="#">Lost My Marbles</a></b>.</p>
+							As a team we developed and released two mobile games named: <b><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Rituals</a></b> and <b><a href="#">Lost My Marbles</a></b>.</p>
 							<p>Having competed in two games jams so far, my respect for the amount of time and effort that they take in order to complete, ensuring the game at the end is fun and unique, has been hightened.<br />
 							Both of these game jams were developed using <b>SDL2</b> and <b>C++</b> in a small team, over a two day span.<br />
 							This jam experience has improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered.</p>
