--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<style>
 		body
 		{
-			background-image: url('header.jpg');
+			background-image: url('');
 			background-repeat: no-repeat;
 		};
 	</style>
