--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 					</div>
 				</div>
 			</section>
-		
+		 
 		<!-- Three -->
-			<section id="three" class="main style1 special">
+			<section id="three" class="main style1">
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
