--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<p>Below is a run down of my main prior projects and work.</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pic02.jpg" /></span>
 							<h3><strong>Rituals</strong></h3>
 							<p>Unique <b><super><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Mobile Horror Game</a></b></super> developed whilst working at Curioso Games.</p>
 						</div>
@@ -68,7 +68,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 							<h3><strong><b>Lost My Marbles</b></strong></h3>
-							<p>Charming <b><super><a href="#" target=”_blank”>Match-4 Marble Dropping Game</a></b></super> developed whilst working at Curioso Games.</p>
+							<p>Charming <b><super><a href="#" target=”_blank”>Match-4 Dropping Marble Game</a></b></super> developed at Curioso Games.</p>
 						</div>
 						
 						<div class="col-4 col-12-medium">
@@ -116,14 +116,14 @@
 							<header class="major">
 								<h2>More details of my main projects.</h2>
 							</header>
-							<p>Coming to the end of the first simester of University content I have covered technological content ranging from how to present yourself professionally online, to the hardware aspect of game development. <br />
-							Over this time I have had the opportunity to continue to work on improving my skillset in <b>C++</b> and using <super>Visual studio</super> as a code editor. <br />
+							<p>Coming to the end of the first simester of University content I have covered technological content ranging from how to present yourself professionally online, to the physical hardware aspect of games programming and development. <br />
+							Over this time I have been able to continue to improve my skillset in <b>C++</b> using <super>Visual studio</super> as a code editor. <br />
 							Through covering how data is handled within programs, I have a greater understanding of how my programs store and convert data between types, allowing me to develop more efficient programs.</p>
-							<p>Having worked at my first professional programming job, at a local mobile games company, I have had the opportunity to improve my ability as working as a team, using the scripting language C# within Unity, and working to deadlines within a company. <br />
+							<p>Having finished working at my first professional games programming employment, at a local mobile games company, I have had the opportunity to improve my ability as working as a team. Whilst developing for the company we the scripting language C# within Unity to work to deadlines and milestones. <br />
 							As a team we developed and released two mobile games named: <b><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Rituals</a></b> and <b><a href="#" target=”_blank”>Lost My Marbles</a></b>.</p>
 							<p>Having competed in two games jams so far, my respect for the amount of time and effort that they take in order to complete, ensuring the game at the end is fun and unique, has been hightened.<br />
 							Both of these game jams were developed using <b>SDL2</b> and <b>C++</b> in a small team, over a two day span.<br />
-							This jam experience has improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered.</p>
+							This jam experience has improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered, allowing me to tackle them in a way I wouldn't normally have, with little repecussions if it doesn't work.</p>
 						</div>
 					</div>
 				</div>
