--- a/index.html
+++ b/index.html
@@ -132,12 +132,14 @@
 		<!-- youtube test-->
 			<section id="four" class="main style1">
 				<div class="container">
-					<header class="major">
-						<h2>Youtube Test</h2>
-					</header>
+					<div class="row gtr-150">
+						<header class="major">
+							<h2>Youtube Test</h2>
+						</header>
 
-					<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
-					</iframe>
+						<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+						</iframe>
+					</div>
 				</div>
 			</section>
 		
