--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
+							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"> </iframe>
+							
+							<!--
 							<ul class="major-icons">
 								<li><span class="image fit"><img src = "images/LLTKDiamondImage.png" /></span></li>
 								<li><span class="icon solid style2 major fa-bolt"></span></li>
@@ -111,6 +114,7 @@
 								<li><span class="icon solid style5 major fa-desktop"></span></li>
 								<li><span class="icon solid style6 major fa-calendar"></span></li>
 							</ul>
+-->
 						</div>
 						<div class="col-6 col-15-medium"> <!-- width and height -->
 							<header class="major">
@@ -125,20 +129,6 @@
 							Both of these game jams were developed using <b>SDL2</b> and <b>C++</b> in a small team, over a two day span.<br />
 							This jam experience has improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered, allowing me to tackle them in a way I wouldn't normally have, with little repecussions if it doesn't work.</p>
 						</div>
-					</div>
-				</div>
-			</section>
-		
-		<!-- youtube test-->
-			<section id="four" class="main style1">
-				<div class="container">
-					<div class="row gtr-150">
-						<header class="major">
-							<h2>Youtube Test</h2>
-						</header>
-
-						<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
-						</iframe>
 					</div>
 				</div>
 			</section>
