--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<div class="col-4 col-12-medium">
 							<!--
 							<span class="image fit"><img src="images/pic02.jpg" /></span> -->
-							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"> </iframe>
+							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY" autoplay=0 &mute=0> </iframe>
 							<h3><strong>Rituals</strong></h3>
 							<p>Unique <b><super><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Mobile Horror Game</a></b></super> developed whilst working at Curioso Games.</p>
 						</div>
@@ -70,7 +70,7 @@
 						<div class="col-4 col-12-medium">
 							<!--
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span> -->
-							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"> </iframe>
+							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY" autoplay=0 &mute=0> </iframe>
 							<h3><strong><b>Lost My Marbles</b></strong></h3>
 							<p>Charming <b><super><a href="#" target=”_blank”>Match-4 Dropping Marble Game</a></b></super> developed at Curioso Games.</p>
 						</div>
@@ -78,7 +78,7 @@
 						<div class="col-4 col-12-medium">
 							<!--
 							<span class="image fit"><img src="images/pacmanImage.png" alt="" /></span> -->
-							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"> </iframe>
+							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY" autoplay=0 &mute=0> </iframe>
 							<h3><strong><b>Pacman</b></strong></h3>
 							<p>Re-creation of the classic <a href="https://github.com/BrandonMJRoberts/Pacman/tree/master/Pacman" target=”_blank”><i><b>Pacman</b></i></a> game, written using a university framework for my Games Engine Creation module.</p>
 						</div>
@@ -90,14 +90,14 @@
 						</div>
 						
 						<div class="col-4 col-12-medium">
-							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"> </iframe>
+							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY" autoplay=0 &mute=0> </iframe>
 							<!-- <span class="image fit"><img src="images/LongLiveTheKingIcon.png" alt="images/pic04.jpg" /></span> -->
 							<h3><strong><b>Long Live The King</b></strong></h3>
 							<p>Developed for the <a href="https://player-two.itch.io/long-live-the-king" target=”_blank”><b>Ludum Dare 43</b></a> Game Jam event.</p>
 						</div>
 						
 						<div class="col-4 col-12-medium">
-							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"> </iframe>
+							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY" autoplay=0 &mute=0> </iframe>
 							<!--<span class="image fit"><img src="images/ZombieEscapeIcon.png" alt="images/pic04.jpg" /></span> -->
 							<h3><strong><b>Zombie Escape</b></strong></h3>
 							<p>Developed during a two day Game Jam <a href="https://player-two.itch.io/zombie-escape" target=”_blank”><b>Ludum Dare 42</b></a> whilst working in a small team.</p>
