--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
-							<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"> </iframe>
+							<span class="image fit"><img src="images/pic02.jpg" /></span>
+							<span class="image fit"><img src="images/pic02.jpg" /></span>
+							<span class="image fit"><img src="images/pic02.jpg" /></span>
 							
 							<!--
 							<ul class="major-icons">
