--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 								<h2>More details of my main projects.</h2>
 							</header>
 							<p>Coming to the end of the first simester of University content I have covered technological content ranging from how to present yourself professionally online, to the physical hardware aspect of games programming and development. <br />
-							Over this time I have been able to continue to improve my skillset in <b>C++</b> using <super>Visual studio</super> as a code editor. <br />
+							Over this time I have been able to continue to improve my skillset in <b>C++</b> whilst using <super>Visual studio</super> as a code editor. <br />
 							Through covering how data is handled within programs, I have a greater understanding of how my programs store and convert data between types, allowing me to develop more efficient programs.</p>
 							<p>Having finished working at my first professional games programming employment, at a local mobile games company, I have had the opportunity to improve my ability as working as a team. Whilst developing for the company we the scripting language C# within Unity to work to deadlines and milestones. <br />
 							As a team we developed and released two mobile games named: <b><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Rituals</a></b> and <b><a href="#" target=”_blank”>Lost My Marbles</a></b>.</p>
