--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="image fit"><img srx="images/ProfilePicture.jpg"/></span>
+					<span class="icon brands alt cloud"></span>
 					<h1><strong>WORK IN PROGRESS! A portfolio of work.</strong></h1>
 					<p>Brandon Roberts</p>
 				</div>
