--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							I am currently focusing my time on working on university projects as well as participating in occasional <b><a href="https://player-two.itch.io/" target=”_blank”>Game Jam</a></b> event.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/ProfilePicture.jpg" alt="images/pic01.jpg" /></span>
+							<span class="image fit"><img src="images/Profile Picture.jpeg" alt="images/pic01.jpg" /></span>
 						</div>
 					</div>
 				</div>
