--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon brands fa-solid cloud"></span>
+					<span class="icon solid major fa-cloud"></span>
 					<h1><strong>WORK IN PROGRESS! A portfolio of work.</strong></h1>
 					<p>Brandon Roberts</p>
 				</div>
