--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" /></span>
+							<span class="image fit"><img src="images/L4ProDev.jpg" /></span>
 							<span class="image fit"><img src="images/pic02.jpg" /></span>
 							<span class="image fit"><img src="images/pic02.jpg" /></span>
 						</div>
