--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
 			<section id="three" class="main style1">
 				<div class="container">
 					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
+						<div class="col-3 col-6-medium">
 							<span class="image fit"><img src="images/L4ProDev.jpg" /></span>
 							<span class="image fit"><img src="images/pic02.jpg" /></span>
 							<span class="image fit"><img src="images/pic02.jpg" /></span>
 						</div>
-						<div class="col-6 col-15-medium"> <!-- width and height -->
+						<div class="col-6 col-15-small"> <!-- width and height -->
 							<header class="major">
 								<h2>More details of my main projects.</h2>
 							</header>
