--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-6-medium">
 							<span class="image fit"><img src="images/L4ProDev.jpg" /></span>
-							<span class="image fit"><img src="images/pic02.jpg" /></span>
+							<span class="image fit"><img src="images/Rituals Image.jpg" /></span>
 							<span class="image fit"><img src="images/pic02.jpg" /></span>
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
