--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						<div class="col-6 col-6-medium">
 							<span class="image fit"><img src="images/L4ProDev.jpg" /></span>
 							<span class="image fit"><img src="images/Rituals Image.jpg" /></span>
-							<span class="image fit"><img src="images/pic02.jpg" /></span>
+							<span class="image fit"><img src="images/LLTK+ZE Image.png" /></span>
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
 							<header class="major">
