--- a/index.html
+++ b/index.html
@@ -114,8 +114,6 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-6-medium">
 							<span class="image fit"><img src="images/L4ProDev.jpg" /></span>
-							<span class="image fit"><img src="images/Rituals Image.jpg" /></span>
-							<span class="image fit"><img src="images/LLTK+ZE Image.png" /></span>
 						</div>
 						<div class="col-6 col-15-small"> <!-- width and height -->
 							<header class="major">
@@ -124,8 +122,40 @@
 							<p>Coming to the end of the first simester of University content I have covered technological content ranging from how to present yourself professionally online, to the physical hardware aspect of games programming and development. <br />
 							Over this time I have been able to continue to improve my skillset in <b>C++</b> whilst using <super>Visual studio</super> as a code editor. <br />
 							Through covering how data is handled within programs, I have gained a greater understanding of how my programs store and convert data between types, allowing me to develop more efficient programs with the understanding of why there are more efficient.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		
+		
+		<!-- Four -->
+			<section id="three" class="main style1">
+				<div class="container">
+					<div class="row gtr-150">
+						<div class="col-6 col-6-medium"><span class="image fit"><img src="images/Rituals Image.jpg" /></span>
+						</div>
+						<div class="col-6 col-15-small"> <!-- width and height -->
+							<header class="major">
+								<h2>More details of my main projects.</h2>
+							</header>						
 							<p>Having finished working at my first professional games programming employment, at a local mobile games company, I have had the opportunity to improve my ability as working as a team. Whilst developing for the company we used the scripting language of C# within Unity to work to deadlines and complete projects. <br />
 							As a team we developed and released two mobile games named: <b><a href="https://apps.apple.com/app/id1484723352?ls=1" target=”_blank”>Rituals</a></b> and <b><a href="#" target=”_blank”>Lost My Marbles</a></b>.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		
+		<!-- Five -->
+			<section id="three" class="main style1">
+				<div class="container">
+					<div class="row gtr-150">
+						<div class="col-6 col-6-medium">
+							<span class="image fit"><img src="images/LLTK+ZE Image.png" /></span>
+						</div>
+						<div class="col-6 col-15-small"> <!-- width and height -->
+							<header class="major">
+								<h2>More details of my main projects.</h2>
+							</header>
 							<p>Having competed in two games jams so far, my respect for the amount of time and effort that they take in order to complete, ensuring the game at the end is fun and unique, has been hightened.<br />
 							Both of these game jams were developed using <b>SDL2</b> and <b>C++</b> in a small team, over a two day span.<br />
 							This jam experience has improved my ability to write effective code quickly, along with giving me the freedom to tackle problems I wouldn't have otherwised encountered, allowing me to tackle them in a way I wouldn't normally have, with little repecussions if it doesn't work.</p>
